--- a/src/app/core-iu/table/table.component.html
+++ b/src/app/core-iu/table/table.component.html
@@ -8,17 +8,19 @@
             </button>
         </div>
 
-        <table mat-table [dataSource]="dataSource" class="table" flex>
+        <div flex>
+            <table mat-table [dataSource]="dataSource" class="table" >
 
-            <ng-container *ngFor="let element of displayedColumns" [cdkColumnDef]="element">
-                <th mat-header-cell *matHeaderCellDef><label style="font-size: large">{{element}}</label></th>
-                <td mat-cell *matCellDef="let row">{{row[element]}}</td>
-            </ng-container>
+                <ng-container *ngFor="let element of displayedColumns" [cdkColumnDef]="element">
+                    <th mat-header-cell *matHeaderCellDef><label style="font-size: large">{{element}}</label></th>
+                    <td mat-cell *matCellDef="let row">{{row[element]}}</td>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        </table>
+            </table>
+        </div>
 
         <div *ngIf="enablePaging" fxFlex="5">
             <button mat-icon-button (click)="clickNextPage()" class="paging-button">
