--- a/src/app/data-explorer/explorer/explorer.component.html
+++ b/src/app/data-explorer/explorer/explorer.component.html
@@ -17,7 +17,7 @@
                 <div fxLayout="row" fxLayoutAlign="start stretch">
                     <mat-form-field style="margin-right: 1px;top: -3px;height: 1px;" appearance="outline">
                         <mat-label>Select Data</mat-label>
-                        <mat-select (selectionChange)="selectKey($event.value)" multiple>
+                        <mat-select [ngModel]="this.yAxesKeys" (selectionChange)="selectKey($event.value)" multiple>
                             <mat-option *ngFor="let key of dataKeys" [value]="key" style="background-color: #FFFFFF">
                                 {{key}}
                             </mat-option>
