--- a/src/app/data-explorer/explorer/datadownloadDialog/dataDownload.dialog.html
+++ b/src/app/data-explorer/explorer/datadownloadDialog/dataDownload.dialog.html
@@ -27,20 +27,16 @@
                     </mat-radio-button>
                 </mat-radio-group>
                 <div fxLayout="row" fxLayoutAlign="start center" style="margin-left: 35px">
-                        <mat-form-field style="top: -10px" >
-                            <input matInput [matDatepicker]="picker" [disabled]="selectedData !== 'customInterval'" [(ngModel)]="customStartDate">
-                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                            <mat-datepicker #picker></mat-datepicker>
-                        </mat-form-field>
-                        <mat-form-field style="top: -10px; margin-left: 5px">
-                            <input matInput [min]="customStartDate" [disabled]="selectedData !== 'customInterval'" [matDatepicker]="picker2" [(ngModel)]="customEndDate">
-                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                            <mat-datepicker #picker2></mat-datepicker>
-                        </mat-form-field>
+                    <mat-form-field style="top: -10px; width: 270px">
+                        <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1"
+                               [(ngModel)]="dateRange" [selectMode]="'range'" [disabled]="selectedData !== 'customInterval'">
+                        <mat-icon matSuffix [owlDateTimeTrigger]="dt1" *ngIf="selectedData === 'customInterval'">event</mat-icon>
+                        <mat-icon matSuffix style="color: #e0e0e0" *ngIf="selectedData !== 'customInterval'">event</mat-icon>
+                        <owl-date-time #dt1></owl-date-time>
+                    </mat-form-field>
                 </div>
             </div>
         </mat-step>
-
 
 
 
