--- a/src/app/data-explorer/explorer/explorer.component.html
+++ b/src/app/data-explorer/explorer/explorer.component.html
@@ -81,7 +81,7 @@
                             <mat-form-field style="top: -10px; width: 270px">
                                 <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1"
                                        [(ngModel)]="dateRange" [selectMode]="'range'">
-                                <mat-icon matSuffix style="color: white">event</mat-icon>
+                                <mat-icon matSuffix [owlDateTimeTrigger]="dt1" style="color: white">event</mat-icon>
                                 <owl-date-time #dt1></owl-date-time>
                             </mat-form-field>
                         </div>
