--- a/src/app/data-explorer/explorer/explorer.css
+++ b/src/app/data-explorer/explorer/explorer.css
@@ -51,3 +51,13 @@
 .custom-dialog-container .mat-dialog-container {
     padding-top: 0px !important;
 }
+
+.rotate {
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
