Fix streampipes/ce#294: Extract prism.js to core module

--- a/src/app/pipelines/dialog/pipeline-status-dialog.tmpl.html
+++ b/src/app/pipelines/dialog/pipeline-status-dialog.tmpl.html
@@ -37,7 +37,7 @@
                                 <div flex layout="column" ng-show="msg.optionalMessage">
                                     <b>More Details:</b>
                                     <div class="md-padding">
-                                        <pre nag-prism source="{{msg.optionalMessage}}"
+                                        <pre class="language" nag-prism source="{{msg.optionalMessage}}"
                                              style="margin-top:0px;border-radius:0px;"></pre>
                                     </div>
                                 </div>
