--- a/src/app/core-ui/table/table.component.html
+++ b/src/app/core-ui/table/table.component.html
@@ -1,33 +1,36 @@
 <div>
-    <div fxLayout="row">
-        <div *ngIf="enablePaging" fxFlex="5">
-            <button mat-icon-button (click)="clickPreviousPage()" class="paging-button">
-                <mat-icon style="font-size: 30px;height: 30px; width: 30px">
-                    chevron_left
-                </mat-icon>
-            </button>
+    <div fxLayout="column" fxLayoutAlign=" stretch">
+        <div *ngIf="enablePaging" fxLayout="row" fxLayoutAlign="space-between center">
+            <div>
+                <button mat-icon-button (click)="clickPreviousPage()" class="paging-button" matTooltip="Going backwards in time">
+                    <mat-icon style="font-size: 30px;height: 30px; width: 30px">
+                        chevron_left
+                    </mat-icon>
+                </button>
+            </div>
+            <div>
+                <button mat-icon-button (click)="clickNextPage()" class="paging-button" matTooltip="Going forwards in time">
+                    <mat-icon style="font-size: 30px;height: 30px; width: 30px">
+                        chevron_right
+                    </mat-icon>
+                </button>
+            </div>
         </div>
 
-        <div flex>
-            <table mat-table [dataSource]="dataSource" class="table" >
+
+        <div style="overflow: auto">
+            <table mat-table [dataSource]="dataSource">
 
                 <ng-container *ngFor="let element of displayedColumns" [cdkColumnDef]="element">
                     <th mat-header-cell *matHeaderCellDef><label style="font-size: large">{{element}}</label></th>
                     <td mat-cell *matCellDef="let row">{{row[element]}}</td>
                 </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
             </table>
         </div>
 
-        <div *ngIf="enablePaging" fxFlex="5">
-            <button mat-icon-button (click)="clickNextPage()" class="paging-button">
-                <mat-icon style="font-size: 30px;height: 30px; width: 30px">
-                    chevron_right
-                </mat-icon>
-            </button>
-        </div>
     </div>
 </div>
